Compatible with current template.

--- a/ToDo/Weekly-Calls/Call-Logs/11-10-2020.md
+++ b/ToDo/Weekly-Calls/Call-Logs/11-10-2020.md
@@ -1,7 +1,13 @@
-# Group Call, 11/10/2020.
-- Callers: Guennadi (_Dr. Jeff_), Evan (_Peepo_), Justin (_JustinBack_).
-- Made through: Discord.
-- Duration: 1hr 30min, from 5:00 p.m. (UTC-6) to 6:30 p.m.
+# Group Call, [11/10/2020].
+## Details.
+### Attendance.
+  - Guennadi Maximov Cortés ([Dr. Jeff](https://forum.tosdr.org/u/dr_jeff/summary))
+  - Justin René Back ([JustinBack](https://forum.tosdr.org/u/justinback/summary))
+  - Evan Mullen ([Peepo](https://forum.tosdr.org/u/peepo/summary))
+### Duration.
+  - **1hr 30m**.
+### Medium.
+  - [The ToS;DR Discord Server](https://discord.gg/A3tUsSR).
 ## Summary.
 During this talk the following was discussed regarding ***ToS;DR***:
 - Redesign of the entire https://tosdr.org website, including integration with PHP. (_Justin_)
